--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  ffmpeg_kit_flutter_new: ^3.2.0
+  http: ^1.4.0
+  loading_animation_widget: ^1.3.0
+  gap: ^3.0.1
+  path_provider: ^2.1.5
+  shared_preferences: ^2.5.3
+  toastification: ^3.0.3
+  restart_app: ^1.3.2
+  shimmer: ^3.0.0
+  slide_to_act: ^2.0.2
+  flutter_riverpod: ^3.0.0
+  url_launcher: ^6.3.1
+  lottie: ^3.3.2
+  carousel_slider: ^5.1.1
+  flutter_emoji: ^2.5.1
+  image_picker: ^1.2.0
+  image_gallery_saver_plus: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +75,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - images/
+    - assets/animations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
