--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   image_picker: ^1.2.0
   image_gallery_saver_plus: ^4.0.1
   image_painter: ^0.7.1
+  pro_image_editor: ^11.6.0
+  permission_handler: ^12.0.1
+  whatsapp_stickers_handler: ^0.5.0
 
 dev_dependencies:
   flutter_test:
