--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   pro_image_editor: ^11.6.0
   permission_handler: ^12.0.1
   whatsapp_stickers_handler: ^0.5.0
+  connectivity_plus: ^6.1.5
 
 dependency_overrides:
   whatsapp_stickers_handler:
