--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,6 @@ dependencies:
   path_provider: ^2.1.5
   shared_preferences: ^2.5.3
   toastification: ^3.0.3
-  restart_app: ^1.3.2
   shimmer: ^3.0.0
   slide_to_act: ^2.0.2
   flutter_riverpod: ^3.0.0
@@ -53,7 +52,7 @@ dependencies:
   permission_handler: ^12.0.1
   whatsapp_stickers_handler: ^0.5.0
   connectivity_plus: ^6.1.5
-  path: ^1.9.1
+  get: ^4.7.2
 
 dependency_overrides:
   whatsapp_stickers_handler:
