--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  ffmpeg_kit_flutter_new: ^3.2.0
   http: ^1.4.0
   loading_animation_widget: ^1.3.0
   gap: ^3.0.1
@@ -51,8 +50,10 @@ dependencies:
   pro_image_editor: ^11.6.0
   permission_handler: ^12.0.1
   whatsapp_stickers_handler: ^0.5.0
-  connectivity_plus: ^6.1.5
+  connectivity_plus: ^7.0.0
   get: ^4.7.2
+  image: ^4.5.4
+  flutter_image_compress: ^2.4.0
 
 dependency_overrides:
   whatsapp_stickers_handler:
@@ -67,7 +68,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
