--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,20 @@ dependencies:
   get: ^4.7.2
   image: ^4.5.4
   flutter_image_compress: ^2.4.0
+  firebase_core: ^3.14.0
+  firebase_remote_config: ^5.4.5
+  firebase_analytics:
+  firebase_crashlytics: ^4.3.1
+  onesignal_flutter: ^5.3.4
+  google_mobile_ads: ^6.0.0
+  flutter_launcher_icons: "^0.14.4"
+
+flutter_launcher_icons:
+    android: true
+    ios: true
+    image_path: "images/2x/icon.png"
+    min_sdk_android: 24
+    remove_alpha_ios: true
 
 dependency_overrides:
   whatsapp_stickers_handler:
