--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   onesignal_flutter: ^5.3.4
   google_mobile_ads: ^6.0.0
   flutter_launcher_icons: "^0.14.4"
+  in_app_purchase: ^3.2.0
+  in_app_purchase_android: ^0.4.0
 
 flutter_launcher_icons:
     android: true
