--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   flutter_launcher_icons: "^0.14.4"
   in_app_purchase: ^3.2.0
   in_app_purchase_android: ^0.4.0
+  cached_network_image: ^3.4.1
 
 flutter_launcher_icons:
     android: true
