--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   in_app_purchase: ^3.2.0
   in_app_purchase_android: ^0.4.0
   cached_network_image: ^3.4.1
+  photo_view: ^0.15.0
 
 flutter_launcher_icons:
     android: true
